test/kustomize/kustomization.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/refs/heads/master/src/schemas/json/kustomization.json
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ../../kustomize/with-namespace
  - baseIngress.yaml
  - extraPathsIngress.yaml
  - skippedPathIngress.yaml
  - skippedSubdomainIngress.yaml
  - sortSensitiveSubdomainIngress.yaml

patches:
  - path: neverPullImage.yaml
