test/kustomize/neverPullImage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  namespace: ingress-links
spec:
  template:
    spec:
      containers:
        - name: controller
          imagePullPolicy: Never
