test/kustomize/skippedSubdomainIngress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skipped-subdomain-ingress
  namespace: ingress-links
  annotations:
    ingress-links.nev.dev/skip: "true"
spec:
  rules:
    - host: skip.links.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: controller
                port:
                  number: 80
